@@ -1,3 +1,7 @@
+Tue Feb 28 01:53:27 1995  John Gilmore  (gnu at toad.com)
+
+	* movemail.c:  Avoid <krb5/...> includes.
+
 Tue Feb 14 15:30:55 1995 Chris Provenzano  (proven@mit.edu)
 
         * movemail.c Call krb5_sendauth() with new calling convention.
